--- a/css/default.css
+++ b/css/default.css
@@ -1,8 +1,8 @@
 /*
 Design by Shoichi Mori 
 Start from 31/05/12
-http://www.shochimori.co,
-Released for Netbarin.inc in the name of friendship
+http://www.shochimori.com
+Released for Netbarin.inc
 */
 
 body {
@@ -10,7 +10,7 @@ body {
 	padding: 0px;
 	background: #ECF0EC url(../img/carpet.png) repeat;
 	text-align: justify;
-	font-family: 'Arvo', serif;
+	font-family: "framd",Arial, Helvetica, sans-serif; 
 	font-size: 14px;
 	color: #303030;
 }
@@ -18,7 +18,7 @@ body {
 h1, h2, h3 {
 	font: 1.82em;
 	font-weight: normal;
-	font-family: 'Arvo', serif;
+	font-family: "framd",Arial, Helvetica, sans-serif; 
 	letter-spacing: -2px;
 	font-weight: 400px;
 	color: #000000;
@@ -40,6 +40,20 @@ a:hover {
 hr {
 	display: none;
 }
+
+/*-----------------------------*
+ * Web font setting
+ *-----------------------------*/
+@font-face {
+    font-family: 'framd';
+    src: url('../font/framd.eot');
+    src: url('../font/framd.eot?#iefix') format('embedded-opentype'),
+         url('../font/framd.woff') format('woff'),
+         url('../font/framd.ttf') format('truetype'),
+         url('../font/framd.svg#framd') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
 /*-----------------------------*
  * Header 
  *-----------------------------*/
@@ -48,7 +62,7 @@ hr {
 	height: 150px;
 	margin: 0px auto;
 	z-index:2;
-	position:relative;
+	/** position:relative; **/
 }
 
 /* Header line with shadow */
@@ -109,7 +123,7 @@ hr {
 #menu p{
 	margin: 0px 0px 0px 0px;
 	text-align:center;
-	font-family: "Franklin Gothic Medium",Arial, Helvetica, sans-serif; 
+	font-family: "framd",Arial, Helvetica, sans-serif; 
 	font-weight: normal;
 	font-size: 12.5px;
 }
@@ -150,7 +164,7 @@ hr {
 	**/
 	text-decoration: none;
 	text-transform: uppercase;
-	font-family: "Franklin Gothic Medium",Arial, Helvetica, sans-serif; 
+	font-family: "framd",Arial, Helvetica, sans-serif; 
 	font-weight: normal;
 	font-size: 15px;
 	color: #000000;
@@ -254,7 +268,6 @@ hr {
 	width: 1000px;
 	height:440px;
 	margin: 0 auto;
-	/*background:#ccffcc;*/
 }
 
 .dg-wrapper{
@@ -316,14 +329,6 @@ hr {
 }
 
 .gallery-box nav{
-	/*width: 58px;
-	position: absolute;
-	z-index: 1000;
-	bottom: 40px;
-	top: 88%;
-	left: 50%;
-	margin-left: -29px;
-	background:#9400D3;*/
 }
 
 .gallery-box nav span{
@@ -345,6 +350,86 @@ hr {
 	background: transparent url(../img/3Dgallery/arrow-next.png) no-repeat top left;
 	left:960px;
 }
+
+/*
+	Slideshow
+*/
+
+#slides {
+	width:482px;
+	height:316px;
+	margin: 0 auto;
+	position:relative;
+	top:60px;
+	left:4px;
+	z-index:100;
+	-moz-box-shadow: 	3px 3px 5px 6px #4c4c4c;
+	-webkit-box-shadow: 3px 3px 5px 6px #4c4c4c;
+	box-shadow: 		3px 3px 5px 6px #4c4c4c;
+}
+
+.slides_container {
+	width:482px;
+	overflow:hidden;
+	position:relative;
+	top:-26px;
+	display:none;
+}
+
+.slides_container div.slide {
+	width:482px;
+	height:316px;
+	display:block;
+}
+
+.slide a img {
+	opacity: 0.9;
+}
+
+#slides .next,#slides .prev {
+	position:absolute;
+	top:120px;
+	left:-39px;
+	width:24px;
+	height:43px;
+	display:block;
+	z-index:101;
+	opacity: 0.8;
+}
+
+#slides .next {
+	left:497px;
+	opacity: 0.8;
+}
+
+#slides .prev:hover {
+	opacity: 1;
+}
+
+#slides .next:hover {
+	opacity: 1;
+}
+
+.caption {
+	z-index:500;
+	position:absolute;
+	bottom:-35px;
+	left:0;
+	height:30px;
+	padding:5px 20px 0 20px;
+	background:#000;
+	background:rgba(0,0,0,.5);
+	width:540px;
+	font-size:1.3em;
+	line-height:1.33;
+	color:#fff;
+	border-top:1px solid #000;
+	text-shadow:none;
+}
+
+.caption p {
+	font:normal 70%/1.5 Helvetica, Arial, sans-serif;
+	margin:0; padding:0; border:0; outline:0;
 }
 
 /*-----------------------------*
@@ -380,19 +465,15 @@ footer.global #pageTop #sns .sns_botton{
 	padding:0 10px 0 10px;
 }
 
-
-
 footer.global #pageTop a{
 	display: block;
 	text-decoration: none;
 	text-transform: uppercase;
-	font-family: "Franklin Gothic Medium",Arial, Helvetica, sans-serif; 
+	font-family: "framd",Arial, Helvetica, sans-serif; 
 	font-weight: normal;
 	font-size: 15px;
 	color: #000000;
 }
-
-
 
 footer.global #footerCont{
 	width:978px;
@@ -453,7 +534,7 @@ footer.global #footerBtm ul.navi{
 	font-size:77%;
 }
 footer.global #footerBtm ul.navi li{
-	background:url(../img/arrow.png) right 15px no-repeat;
+	background:url(../img/footer/arrow.png) right 15px no-repeat;
 	float:left;
 	margin-right:16px;
 	padding-right:9px;
@@ -469,7 +550,7 @@ footer.global #footerBtm #copyright{
 	position:absolute;
 	top:19px;
 	right:0;
-	font-family: "Franklin Gothic Medium",Arial, Helvetica, sans-serif; 
+	font-family: "framd",Arial, Helvetica, sans-serif; 
 	font-weight: normal;
 	font-size: 12.5px;
 }
